# coup

./: .gitignore  README.md  actions.py  card.py  deck.py  game.py  player.py
haskell/: Coup.cabal  Coup.hs  README.md
