name:                Coup
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matthías Páll Gissurarson
maintainer:          pallm@chalmers.se
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    Coup
  -- other-modules:
  other-extensions: AllowAmbiguousTypes, DataKinds, DeriveGeneric
                  , DuplicateRecordFields, FlexibleContexts, NoMonomorphismRestriction
                  , TypeApplications, RankNTypes
  build-depends: base, QuickCheck, mtl, containers, generic-lens, microlens-platform, microlens
  -- hs-source-dirs:
  default-language:    Haskell2010
 
 
 
 
 
 
 
 
